tests/tooling/fixtures/native/recovery/negative/negative_parameter_bool_generic_suffix.objc3
// Negative fixture: bool parameter generic suffix remains unsupported.
// Expected diagnostic code(s): O3S206.
module NegativeParameterBoolGenericSuffix;

fn choose(flag: bool<NSObject>) -> i32 {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  return 0;
}
